<resources>
    <string name="app_name">My Expenses</string>
    <string name="category_prompt">Choose a category</string>
    <string-array name="categories">
        <item>Bills</item>
        <item>EMI</item>
        <item>Entertainment</item>
        <item>Food Drinks</item>
        <item>Fuel</item>
        <item>Groceries</item>
        <item>Health</item>
        <item>Investment</item>
        <item>Shopping</item>
        <item>Transfer</item>
        <item>Travel</item>
        <item>Other</item>
    </string-array>
    <string name="enter_place">Enter name</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_category">Enter Category</string>
    <string name="enter_additional_info">Enter Addtional Information</string>
    <string name="expense_name">Expense</string>
    <string name="Rs">\u20B9</string>
</resources>
